--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -1,4 +1,7 @@
 header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background: white;
     height: 70px;
     width: 100%;
@@ -8,4 +11,17 @@ header .logo {
     background: url("/static/images/logo.png") no-repeat;
     left: 20px;
     height: 100%;
+    width: 15%;
+}
+
+#api_status {
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    margin-right: 30px;
+    background-color: #CCCCCC;
+}
+
+.available {
+    background-color: #ff545f;
 }
