--- a/web_dynamic/templates/3-hbnb.html
+++ b/web_dynamic/templates/3-hbnb.html
@@ -58,7 +58,7 @@
 		</div>
 		<section class="places">
 			<!-- <h1>Places</h1> -->
-			<article>
+			<!-- <article>
 				<div class="title_box">
 					<h2></h2>
 					<div class="price_by_night"></div>
@@ -74,7 +74,7 @@
 				<div class="description">
 					
 				</div>
-			</article>
+			</article> -->
 			
 		</section>
 	</div>
