--- a/web_dynamic/static/styles/8-places.css
+++ b/web_dynamic/static/styles/8-places.css
@@ -21,6 +21,14 @@
     font-size: 35px;
 }
 
+#not_places {
+    columns: unset;
+    justify-content: center;
+    padding: 0 20px;
+    margin-top: 1%;
+    margin-bottom: 8%;
+}
+
 .places article {
     -webkit-column-break-inside: avoid;
     page-break-inside: avoid;
@@ -32,11 +40,13 @@
     border: 1px solid #FF5A5F;
     border-radius: 4px;
 }
+
 .places h2 {
     font-size: 30px;
     text-align: center;
     margin-top: 0;
 }
+
 .title_box {
     display: flex;
     justify-content: space-between;
