--- a/web_dynamic/static/styles/8-places.css
+++ b/web_dynamic/static/styles/8-places.css
@@ -1,7 +1,30 @@
+#loading {
+    margin: auto;
+    width: 5em;
+    height: 5em;
+    border: 4px solid #f3f3f3;
+    border-top: 5px solid #FF5A5F;
+    border-radius: 100%;
+    animation: spin 1s infinite linear;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+#onLoad {
+    display: flex;
+    padding-top: 50px;
+}
+
 .places {
     column-count: 2;
     columns: 30em;
-    justify-content: center;
     padding: 0 20px;
     margin-top: 1%;
     margin-bottom: 8%;
@@ -23,9 +46,9 @@
 
 #not_places {
     columns: unset;
-    justify-content: center;
+    text-align: center;
     padding: 0 20px;
-    margin-top: 1%;
+    margin-top: 8%;
     margin-bottom: 8%;
 }
 
